# traced_cli

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  otel_tracer.rs
