[package]
name = "traced_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1.17"
opentelemetry_api = { version = "0.19.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.11.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
opentelemetry = "0.19.0"
